[gd_scene load_steps=3 format=3 uid="uid://c8iy7smsdr4u6"]

[ext_resource type="Script" path="res://options_menu.gd" id="1_10v0j"]
[ext_resource type="Texture2D" uid="uid://dy6onpycumo0y" path="res://characters_packed.png" id="2_d5tbp"]

[node name="Options Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 193.0
offset_top = 79.0
offset_right = 194.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10v0j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Green" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Be Green"

[node name="Blue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Be Blue"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(104.57, 50.2016)
scale = Vector2(1.44646, 1.38032)
texture = ExtResource("2_d5tbp")
region_enabled = true
region_rect = Rect2(48, 0, 24, 24)

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(104, 11)
scale = Vector2(1.44646, 1.33071)
texture = ExtResource("2_d5tbp")
region_enabled = true
region_rect = Rect2(0, 0, 24, 24)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
